--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{book}
+\documentclass[oneside]{book}
 \usepackage{geometry}
 \usepackage{amsmath,amsthm,amssymb}
 \usepackage[french]{babel}
@@ -8,8 +8,13 @@
 \usepackage{maths}
 
 
+\title{Eléments de théorie des groupes \\ Résolutions des exercices}
 
+\author{Enoncés de Josette Calais. \\ Résolutions de Oestromemes abonnez vous}
 
+\date{}
+
+%http://zoonek.free.fr/LaTeX/LaTeX_samples_chapter/0.html
 \makeatletter
 \def\thickhrulefill{\leavevmode \leaders \hrule height 1ex \hfill \kern \z@}
 \def\@makechapterhead#1{%
@@ -74,6 +79,10 @@
 
 
 \begin{document}
+
+\maketitle
+
+\tableofcontents
 
 \foreach \folder/\chaptertitle/\exonb [count=\chapternum] in \thebook {
 
