--- a/solutions/1-structure_de_groupe/1-9.tex
+++ b/solutions/1-structure_de_groupe/1-9.tex
@@ -4,5 +4,5 @@ De façon évidente, $\mathbf D \subset \Q$. Soit $\dfrac{a}{10^n}, \dfrac{b}{10
 \[\dfrac{a}{10^n} - \dfrac{b}{10^m} = \dfrac{10^ma - 10^nb}{10^{n+m}}. \]
 
 
-On a $10^ma - 10^nb \in \Z$, et $n+m \in \N$, donc $\dfrac{a}{10^n} - \dfrac{b}{10^m} \in \mathbf{D}$, donc 
+On a $10^ma - 10^nb \in \Z$, et $n+m \in \N$, donc $\dfrac{a}{10^n} - \dfrac{b}{10^m} \in \mathbf{D}$, ainsi 
 $(\mathbb{D}, +)$ et un sous groupe de $( \Q, +)$
