--- a/enonces/1-structure_de_groupe/1-17.tex
+++ b/enonces/1-structure_de_groupe/1-17.tex
@@ -7,7 +7,7 @@ Soit $S$ une partie non vide d'un groupe $G$ ; on pose :
 
 $C_G(S)$ est appelé le \emph{centralisateur} de $S$ dans $G$. Si $S=\{x\}$, on le note $C_G(x)$ et on l'appelle le \emph{centralisateur} de $x$ dans $G$.
 
-\item $Z(G)$ étant le centre de $G$, démontrer la relaion : $\displaystyle \bigcup_{x\in G} C_G(x) = Z(G)$
+\item $Z(G)$ étant le centre de $G$, démontrer la relaion : $\displaystyle \bigcap_{x\in G} C_G(x) = Z(G)$
 
 \item Pour $x\in G$, posons $H = C_G(x)$; Vérifier que $x\in Z(H)$.
 \end{abc}
