--- a/enonces/1-structure_de_groupe/1-18.tex
+++ b/enonces/1-structure_de_groupe/1-18.tex
@@ -1,5 +1,5 @@
 Soit A, B, C trois parties non vides d'un groupe G. 
 
-Soit $H \langle A, B \rangle$ le sous-groupe de G engendé par $A \cup B$.
+Soit $H = \langle A, B \rangle$ le sous-groupe de G engendré par $A \cup B$.
 
 Si $K = \langle A, B, C \rangle$ est le sous-groupe de G engendré par $A \cup B \cup C$, démontrer que $K = \langle H, C \rangle$.
