--- a/enonces/1-structure_de_groupe/1-21.tex
+++ b/enonces/1-structure_de_groupe/1-21.tex
@@ -5,13 +5,13 @@ Soit $n>1$ dans $\N$ et $\left( \dfrac{\Z}{(n)},+ \right)$ le groupe des classes
 \begin{abc}
 \item Prouver que la correspondance $\mu$ est une application [c'est-à-dire que : $(\overline{x'}=\overline{x} \text{ et } \overline{y'} = \overline{y} \Rightarrow \overline{x'y'} = \overline{xy} )$].
 
-En déduire que l'on peut définir dans $\dfrac{\Z}{(n)}$ une multiplication telle que $\overline{x}\overline{y} = \overline{xy}$.
+En déduire que l'on peut définir dans $\dfrac{\Z}{(n)}$ une multiplication telle que $\overline{x} \cdot \overline{y} = \overline{x \cdot y}$.
 
 Montrer alors que $\dfrac{\Z}{(n)}$ est un anneau unitaire. et commutatif.
 
 \item  Soit, dans $\N$, un nombre premier $p$. On désigne par $G_p$ l'ensemble des éléments non nuls de $\dfrac{\Z}{(p)}$.
-\item 
-Preouver, en utilisant le résultat de l'exercice 4, que $G_p$ est un groupe par rapport à la multiplication définie dans $\dfrac{\Z}{(p)}$.
+
+Prouver, en utilisant le résultat de l'exercice 4, que $G_p$ est un groupe par rapport à la multiplication définie dans $\dfrac{\Z}{(p)}$.
 
 En conclure que $\dfrac{\Z}{(p)}$ est un corps.
 
