--- a/maths.sty
+++ b/maths.sty
@@ -13,20 +13,20 @@
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\C}{\mathbb{C}}
 
-
+\newcommand*{\mat}[1]{\begin{pmatrix}#1\end{pmatrix}}
 
 \newcommand{\deffun}[5]{
 \begin{align*}
-#1 : #2 &\rightarrow #3 \\
+#1 : #2 &\rightarrow #3, \\
  #4 &\mapsto #5.
 \end{align*}
 }
 
 
 \newcommand{\inlinedeffun}[5]{
-$\begin{array}[t]{rl}
-#1 : #2 &\rightarrow #3 \\
-#4 &\mapsto #5.
+$\begin{array}[t]{cccc}
+#1 : &#2 &\rightarrow &#3, \\
+&#4 &\mapsto &#5.
 \end{array}$
 }
 
