--- a/solutions/1-structure_de_groupe/1-15.tex
+++ b/solutions/1-structure_de_groupe/1-15.tex
@@ -12,6 +12,6 @@ L'injectivité :
 
 La surjectivité :
 
-\[\forall y\in \R,\ \lambda(log_{10}\ y) = y.\]
+\[\forall y\in \R_+^*,\ \lambda(log_{10}\ y) = y.\]
 
 Donc $\lambda$ est une isomorphisme de groupe.
