--- a/solutions/1-structure_de_groupe/1-19.tex
+++ b/solutions/1-structure_de_groupe/1-19.tex
@@ -1,1 +1,14 @@
- 
+(j'ai repris la demo d'un mec, qui est pas complete je crois, la mienne a environ 200 indices avec des sommes donc chiant a taper)
+
+Soit le groupe des quaternions :
+
+\[
+\left\{
+\begin{aligned}
+  &q_1 = \mat{1 & 0 \\ 0 & 1},  q_2 = \mat{-1 & 0 \\ 0 & -1},  q_3 = \mat{0 & 1 \\ -1 & 0}, q_4= \mat{0 & -1 \\ 1 & 0}, \\
+  &q_5 = \mat{0 & i \\ i & 0},  q_6 = \mat{0 & -i \\ -i & 0}, q_7= \mat{-i & 0 \\ 0 & i},  q_8 = \mat{i & 0 \\ 0 & -i}                   
+\end{aligned}
+\right\} 
+\]
+
+On calcule bêtement $\langle A, B \rangle$ et cqfd.
