--- a/solutions/1-structure_de_groupe/1-20.tex
+++ b/solutions/1-structure_de_groupe/1-20.tex
@@ -1,1 +1,12 @@
- 
+Soit $\mat{x & x \\ 0 &0 }, \mat{y & y \\ 0 & 0} \in \Gamma $ :
+
+\[\mat{x & x \\ 0 &0 } \cdot \mat{y & y \\ 0 & 0} = \mat{xy & xy \\ 0 & 0} \in \Gamma.\]
+
+De plus, pour tout $\mat{x & x \\ 0 &0 } \in \Gamma$, son inverse $\mat{1/x & 1/x \\ 0 &0 } \in \Gamma$,  et $\mat{1 & 1 \\ 0 &0 }$ est le neutre pour la multiplication des matrices dans cet ensemble.
+
+On sait la loi associative, ainsi, $\Gamma$ est un groupe pour la multiplication des matrices.
+
+Ce n'est cependant pas un sous-groupe de $GL_2(\R)$, car elles ne sont pas inversibles, ayant toutes un déterminant nul.
+
+
+On vérifie directement que \inlinedeffun{\varphi}{\R^*}{\Gamma}{x}{\mat{x & x \\ 0 &0 }} est un isomorphisme de groupe.
