--- a/solutions/1-structure_de_groupe/1-14.tex
+++ b/solutions/1-structure_de_groupe/1-14.tex
@@ -27,7 +27,7 @@ Soit $x$ un élément de $\R^*_+$, on a $g(x)=x$, donc $g$ est surjective, véri
 C'est donc un épimorphisme de groupe, déterminons son noyau :
 
 \begin{align*}
-    \ker g &= \left\{ x\in \R^*,\ f(x) = 1 \right\}, \\
-           &= \left\{ x\in \R^*,\ |x| = 1 \right\}, \\
+    \ker g &= \left\{ x\in \C^*,\ f(x) = 1 \right\}, \\
+           &= \left\{ x\in \C^*,\ |x| = 1 \right\}, \\
            &= \mathbb{U}.
 \end{align*}
