corrigé erreur de fichiers + résolution exo 22

--- a/enonces/1-structure_de_groupe/1-22.tex
+++ b/enonces/1-structure_de_groupe/1-22.tex
@@ -3,26 +3,31 @@ Vérifier que
 \[
 \Gamma = 
 \left\{
-\begin{pmatrix}
+I = \begin{pmatrix}
     1 & 0 \\
     0 & 1
 \end{pmatrix},
+\gamma_1 =
 \begin{pmatrix}
     -1 & -1 \\
     1 & 0 
 \end{pmatrix},
+\gamma_2 =
 \begin{pmatrix}
     0 & 1 \\
     -1 & -1
 \end{pmatrix},
+\gamma_3 =
 \begin{pmatrix}
-    0 & -1 \\
+    0 & 1 \\
     1 & 0
 \end{pmatrix},
+\gamma_4 =
 \begin{pmatrix}
     1 & 0 \\
     -1 & -1
 \end{pmatrix},
+\gamma_5 = 
 \begin{pmatrix}
     -1 & -1 \\
     0 & 1
