--- a/enonces/1-structure_de_groupe/1-29.tex
+++ b/enonces/1-structure_de_groupe/1-29.tex
@@ -1,1 +1,13 @@
- 
+Soit E un ensemble non vide et $G$ un groupe d'élément unité $e$. On désigne par $G^E$ l'ensemble des applications $f$ de $E$ dans $G$.
+ On considère la loi de composition définie dans $G^E$ par :
+
+ \begin{align*}
+    G^E \times G^E &\rightarrow G^E \\
+    (f,g) &\mapsto fg,
+ \end{align*}
+
+ Où $fg$ est telle que pour tout $x \in E$, $(fg)(x) = f(x)g(x)$.
+
+ Prouver que $(G^E)$ est ainsi muni d'une structure de groupe.
+
+ Vérifier que $G^E$ est un groupe abélien si et seulement si $G$ est abélien.
