--- a/enonces/1-structure_de_groupe/1-23.tex
+++ b/enonces/1-structure_de_groupe/1-23.tex
@@ -3,18 +3,22 @@
 Démontrer les résultats suivants :
 \[
 \Gamma_1 = \left\{
+    I =
 \begin{pmatrix}
     1 & 0 \\
     0 & 1
 \end{pmatrix},
+\gamma_1 = 
 \begin{pmatrix}
     0 & 1 \\
     -1 & 0
 \end{pmatrix},
+\gamma_2 = 
 \begin{pmatrix}
     -1 & 0 \\
     0 & -1
 \end{pmatrix},
+\gamma_3 = 
 \begin{pmatrix}
     0 & -1 \\
     1 & 0
