--- a/enonces/1-structure_de_groupe/1-24.tex
+++ b/enonces/1-structure_de_groupe/1-24.tex
@@ -21,5 +21,5 @@
 
  est un sous-groupe de $GL(2,\R)$ et que $K_2 = \left\{ \overline{1}, \overline{3}, \overline{5}, \overline{7} \right\}$, sous-ensemble de $\dfrac{\Z}{(8)}$, est un groupe par rapport à la multiplication définie dans $\dfrac{\Z}{(8)}$.
 
- \item Vérifier qu ces deux groupes sont isomorphes. Ces groupes sont-ils isomorphes au groupe de Klein?
+ \item Vérifier que ces deux groupes sont isomorphes. Ces groupes sont-ils isomorphes au groupe de Klein?
 \end{abc}
