--- a/solutions/1-structure_de_groupe/1-23.tex
+++ b/solutions/1-structure_de_groupe/1-23.tex
@@ -28,4 +28,4 @@ De façon immédiate, on a que $\gamma_1 \subset GL(2, \R )$, $\Gamma_2 \subset 
 \]
 
 On remarque que ce sont tous des groupes cyclique d'ordre 4, avec $\Gamma_1 = \langle \gamma_1 \rangle$,
-$\gamma_2 = \langle i \rangle$ et $\gamma_3 = \langle 2 \rangle$, ils sont donc tous isomorphes entre eux.
+$\Gamma_2 = \langle i \rangle$ et $\Gamma_3 = \langle 2 \rangle$, ils sont donc tous isomorphes entre eux.
