--- a/solutions/1-structure_de_groupe/1-1.tex
+++ b/solutions/1-structure_de_groupe/1-1.tex
@@ -1,5 +1,5 @@
 \begin{enumerate}[label=\alph*)]
-    \item $\forall a,b,c \in \Z, (a \ast b) \ast c = a - b - c $, et  $ a \ast (b \ast c) = a - b + c $, la loi n'est pas associative. Et $2 \ast 1 = 1 \neq -1 = 1 \ast 2$ montre qu'elle n'est pas non plus commutative.
-    \item On vérifie que $0$ est un neutre à droite pour $\ast$ : $\forall a \in \Z,\ a \ast 0 = a - 0 = a$. Il n'est cependant pas un neutre pour $\ast$, car $0 \ast a = -a \neq a$.
+    \item $\forall a,b,c \in \Z, (a \ast b) \ast c = a - b - c $, et  $ a \ast (b \ast c) = a - b + c $, la loi n'est pas associative car par exemple on a $(0\ast 0) \ast 1 = -1 \neq 1 = 0 \ast (0 \ast 1)$. Et $2 \ast 1 = 1 \neq -1 = 1 \ast 2$ montre qu'elle n'est pas non plus commutative.
+    \item On vérifie que $0$ est un neutre à droite pour $\ast$ : $\forall a \in \Z,\ a \ast 0 = a - 0 = a$. Il n'est cependant pas un neutre pour $\ast$, car $0 \ast a = -a \neq a$, car on a par exemple $0 \ast 1 = -1 \neq 1$.
     \item $\forall a \in \Z,\ a \ast a' = e \Rightarrow a = a'$. Pour tout élément $a \in Z$, $a$ est son propre inverse à droite.
 \end{enumerate}
