--- a/solutions/1-structure_de_groupe/1-10.tex
+++ b/solutions/1-structure_de_groupe/1-10.tex
@@ -7,9 +7,11 @@
 On a $p^ma - p^nb \in \Z$, et $n+m \in \N$, donc $\dfrac{a}{p^n} - \dfrac{b}{p^m} \in \Q_p$, ainsi 
 $(\Q_p, +)$ et un sous groupe de $( \Q, +)$. De plus :
 
-\[\bigcup_{n \in \N} \langle \dfrac{1}{p^n} \rangle = \left\{ \dfrac{a}{p^n};\ a\in \Z,\ n\in \N  \right\} = \Q_p.\]
+\[\bigcup_{n \in \N} \langle \dfrac{1}{p^n} \rangle =
+\bigcup_{n \in \N} \left\{  \dfrac{a}{p^n};\ a\in \Z \right\}
+= \left\{ \dfrac{a}{p^n};\ a\in \Z,\ n\in \N  \right\} = \Q_p.\]
 
-\item $\varphi$ est clairement injective. De plus, comme $\dfrac{a}{p^n}=p \dfrac{a}{p^{n+1}} $, on en déduite que $\phi$ est surjective,
+\item $\varphi$ est clairement injective. De plus, comme $\dfrac{a}{p^n}=p \dfrac{a}{p^{n+1}} $, on en déduite que $\varphi$ est surjective,
 donc que c'est une permutation.
 
 \begin{align*}
