--- a/solutions/1-structure_de_groupe/1-18.tex
+++ b/solutions/1-structure_de_groupe/1-18.tex
@@ -1,3 +1,6 @@
+(j'ai repris la demo d'un mec, qui est pas complete je crois, la mienne a environ 200 indices avec des sommes donc chiant a taper)
+
+
 Soit $\mathcal{H}_S$ l'ensemble des sous groupe de G contenant S. Par définition,
 
 \[H = \displaystyle \bigcap_{L \in \mathcal{H}_{A \cup B}} L,\quad K = \bigcap_{L \in\mathcal{H}_{A \cup B \cup C}} L.\]
