--- a/solutions/1-structure_de_groupe/1-19.tex
+++ b/solutions/1-structure_de_groupe/1-19.tex
@@ -1,4 +1,3 @@
-(j'ai repris la demo d'un mec, qui est pas complete je crois, la mienne a environ 200 indices avec des sommes donc chiant a taper)
 
 Soit le groupe des quaternions :
 
@@ -11,4 +10,15 @@ Soit le groupe des quaternions :
 \right\} 
 \]
 
-On calcule bêtement $\langle A, B \rangle$ et cqfd.
+On peut exprimer tout les $q_1$ en fonction de $A, B$ :
+
+\begin{itemize}
+  \item $q_1 = A^0$
+  \item $q_2 = A^2 = B^2$
+  \item $q_3 = A$
+  \item $q_4 = q_2A = A^3$
+  \item $q_5 = B$
+  \item $q_6 = q_2B = B^3$
+  \item $q_7 = BA$
+  \item $q_8 = B^3A$
+\end{itemize}
