--- a/solutions/1-structure_de_groupe/1-21.tex
+++ b/solutions/1-structure_de_groupe/1-21.tex
@@ -21,7 +21,7 @@ Ainsi :
 la multiplication ainsi définie est associative, commutative, de neutre $\overline{1}$, et est distributive par rapport à l'addition. $\cycle{n}$ est donc un anneau unitaire commutatif.
 
 \item L'ensemble $G_p$ est fini, est dans le a) on a montré que la loi de multiplication associée est associative. Montrons que chaque élément est simplifiable à droite et à gauche. Soit $\overline{a},\overline{x},\overline{y} \in G_p$ tel que $\overline{a}\overline{x} = \overline{a}\overline{y}$. 
-On a $\overline{ax}=\overline{ay}$, autrement dit, que $ax-ay = a(x-y)$ est un multiple de $p$. $\overline{a}$ étant non nul, $x-y$ est un multiple de $p$, et donc que $\overline{x}= \overline{y}$. Par commutativité, tout les éléments sont simplifiable à droite et à gauche. D'après l'exo 4, $G_p$ est un groupe.
+On a $\overline{ax}=\overline{ay}$, autrement dit, que $ax-ay = a(x-y)$ est un multiple de $p$. Comme $p$ est un nombre premier ne divisant pas $a$ par hypothèse, $x-y$ est un multiple de $p$ d'après le lemme d'Euclide, et donc  $\overline{x}= \overline{y}$. Par commutativité, tout les éléments sont simplifiable à droite et à gauche. D'après l'exo 4, $G_p$ est un groupe.
 De plus, tout élément non nul de $\cycle{p}$ est inversible, donc c'est un corps.
 \item Chapitre 3.
 \end{abc} 
