--- a/solutions/1-structure_de_groupe/1-3.tex
+++ b/solutions/1-structure_de_groupe/1-3.tex
@@ -25,4 +25,4 @@ Ainsi, le neutre à droite de $G$ est aussi un neutre à gauche.
 
 $(G, \cdot)$ est donc un groupe.
 
-On vérifie que pour $(\Z, -)$, la loi n'est pas associative, mais que 0 est un neutre à droite (et non à gauche) et que tout élément est symétrisable.
+On a vérifié dans l'exercice 1 que pour $(\Z, -)$, la loi n'est pas associative, mais que 0 est un neutre à droite (et non à gauche) et que tout élément est symétrisable.
