--- a/solutions/1-structure_de_groupe/1-4.tex
+++ b/solutions/1-structure_de_groupe/1-4.tex
@@ -1,5 +1,4 @@
-Tout les éléments étant simplifiables à droite implique que les applications :
-
+Comme tout les éléments de $G$ sont simplifiables à droite et à gauche, les applications :
 \[
 \begin{array}[t]{rl}
 \tau_g^y : G &\rightarrow G \\
