--- a/solutions/1-structure_de_groupe/1-6.tex
+++ b/solutions/1-structure_de_groupe/1-6.tex
@@ -9,14 +9,13 @@ Supposons que $G$ soit abélien :
     &= f(a)f(b).
 \end{align*}
 
-Donc abélien $\Rightarrow$ automorphisme.
+Donc $G$ abélien $\Rightarrow$ $f$ est un automorphisme.
 
 Supposons que $f$ soit un automorphisme :
 
 \begin{align*}
-    \forall a,b \in G,\quad f(ab)&=f(a)f(b), \\
-    b^{-1}a^{-1} &= a^{-1}b^{-1}, \\
-    ab &= ba.
+    \forall a,b \in G,\quad f(ab)=f(a)f(b) &\Rightarrow  b^{-1}a^{-1} = a^{-1}b^{-1}, \\
+    &\Rightarrow ab = ba \text{ en appliquant f des deux côtés}.
 \end{align*}
 
 ainsi, $f$ est un automorphisme si et seulement si $G$ est abélien.
