--- a/solutions/1-structure_de_groupe/1-7.tex
+++ b/solutions/1-structure_de_groupe/1-7.tex
@@ -3,7 +3,7 @@ Soit $G$ d'ordre $2n$, définissons la relation d'équivalence :
 \[x \mathcal{R} y \Leftrightarrow x=y \text{ ou } x = y^{-1}.\]
 
 Soit $\{x_i\}_{i\in I}$ une famille de représentants des classes modulo $\mathcal{R}$.
-On a $1 \leq \overline{x_1} \leq 2$. le groupe se partitionne en $k$ classes d'un élément et $l$ classes de deux éléments, et on a donc :
+pour tout $\overline{x} \in G/\mathcal{R}$ a $1 \leq | \overline{x} | \leq 2$. le groupe se partitionne en $k$ classes d'un élément (correspondant aux éléments qui sont leur propre inverse) et $l$ classes de deux éléments de la forme $\left\{x, x^{-1}\right\}$, et on a donc :
 
 \[2n = k + 2l\]
 
