--- a/solutions/1-structure_de_groupe/1-9.tex
+++ b/solutions/1-structure_de_groupe/1-9.tex
@@ -1,8 +1,8 @@
  
-De façon évidente, $\mathbf D \subset \Q$. Soit $\dfrac{a}{10^n}, \dfrac{b}{10^m}$,
+De façon évidente, $\mathbf D \subset \Q$. Soit $\dfrac{a}{10^n}, \dfrac{b}{10^m} \in \mathbf{D}$,
 
 \[\dfrac{a}{10^n} - \dfrac{b}{10^m} = \dfrac{10^ma - 10^nb}{10^{n+m}}. \]
 
 
-On a $10^ma - 10^nb \in \Z$, et $n+m \in \N$, donc $\dfrac{a}{10^n} - \dfrac{b}{10^m} \in \mathbf{D}$, ainsi 
-$(\mathbb{D}, +)$ et un sous groupe de $( \Q, +)$
+On a $10^ma - 10^nb \in \Z$ car $a,b \in \Z$, et $n+m \in \N$, donc $\dfrac{a}{10^n} - \dfrac{b}{10^m} \in \mathbf{D}$, ainsi 
+$(\mathbf{D}, +)$ et un sous groupe de $( \Q, +)$
