--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 \usepackage{tikz}
 \usepackage[shortlabels]{enumitem}
 \usepackage{maths}
-
+\usepackage{tikz-cd}
 
 \title{Eléments de théorie des groupes \\ Résolutions des exercices}
 
