--- a/enonces/2-classes_modulo_un_sous_groupe/2-1.tex
+++ b/enonces/2-classes_modulo_un_sous_groupe/2-1.tex
@@ -1,1 +1,1 @@
-TEST
+Soient $H$ et $K$ deux sous-groupes finis d'un groupe $G$, tels que $\sigma(H)=p$ et $\sigma(K)=q$. Montrer que si $p$ et $q$ sont premiers entre eux, alors $H \cap K$ est réduit à l'élement neutre de $G$.
