--- a/main.tex
+++ b/main.tex
@@ -1,12 +1,13 @@
 \documentclass[oneside]{book}
 \usepackage{geometry}
 \usepackage{amsmath,amsthm,amssymb}
-\usepackage[french]{babel}
 \usepackage[T1]{fontenc}
 \usepackage{tikz}
 \usepackage[shortlabels]{enumitem}
+\usepackage{moreenum}
 \usepackage{maths}
 \usepackage{tikz-cd}
+\usepackage[greek, french]{babel}
 
 \title{Eléments de théorie des groupes \\ Résolutions des exercices}
 
@@ -67,7 +68,7 @@
 \newcommand*{\thebook}{%
   % dossier/chapitre/nombre d'exercices
   1-structure_de_groupe/Structure de groupe/34,
-  2-classes_modulo_un_sous_groupe/Classes modulo un sous-groupe/10,
+  2-classes_modulo_un_sous_groupe/Classes modulo un sous-groupe/11,
   3-groupes_monogenes_groupes_symetriques_groupes_diedraux/{Groupes monogènes, symétriques et diédraux}/33,
   4-sous_groupes_normaux/Sous-groupes normaux/38,
   5-groupe_operant_sur_un_ensemble/Groupe opérant sur un ensemble/27,
