--- a/maths.sty
+++ b/maths.sty
@@ -34,3 +34,11 @@ $\begin{array}[t]{cccc}
 
 \newlist{abc}{enumerate}{1}
 \setlist[abc, 1]{label=\alph*)}
+
+\newcommand{\famille}[3]{
+    \left\{ #1 \right\}_{#2 \in #3}
+}
+
+\newcommand{\indice}[2]{
+    \left[ #1 : #2 \right]
+}
