--- a/maths.sty
+++ b/maths.sty
@@ -13,6 +13,9 @@
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\C}{\mathbb{C}}
 
+\newcommand{\inter}{\cap}
+\newcommand{\union}{\cup}
+
 \newcommand*{\mat}[1]{\begin{pmatrix}#1\end{pmatrix}}
 
 \newcommand{\deffun}[5]{
